addition KMP